--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,3 +6,33 @@
 main {
   margin-top: 1rem;
 }
+
+article.small {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-sizing: border-box;
+}
+
+article.list-item {
+  flex-direction: row;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+  gap: 1rem;
+
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+article.list-item button {
+  margin: 0;
+}
